Use Apache Commons Lang StringUtils for cleaner string validation and manipulation, and add dependency to pom.